# dbusify

./: .gitignore  .gitmodules  Cargo.toml  README.md  TESTING.md  test.sh
.github/workflows/: rust.yml
dbusify_hyper/: Cargo.toml
mpris/: gen.sh
src/: lib.rs  main.rs  mod.rs  rspotify_hyper.rs  spotify_holder.rs
src/mpris/: mod.rs  mpris.rs  player.rs  playlists.rs  tracklist.rs
src/mprisimpl/: mod.rs  player.rs  playlist.rs  tracklist.rs
tests/: bootstrap_account.rs  integration_player_test.rs  integration_playlist_get_data_test.rs  integration_playlist_play_test.rs  integration_tests_utils.rs  integration_tracklist_test.rs
