[package]
name = "dbusify"
version = "0.1.1"
authors = ["Andrzej Ressel <jereksel@gmail.com>"]

[dependencies]
rspotify = { git = "https://github.com/jereksel/rspotify", rev = "ec7183b0578e38fdc6fc071a07bfed1628cd5714" }
itertools = "0.7.8"
dbus = "0.6.2"
hyper = "0.12.10"
futures = "0.1.21"
webbrowser = "0.2.2"
